--- a/TelosysTools/templates/spring-data-rest-templates-TT210/jpa_bean.vm
+++ b/TelosysTools/templates/spring-data-rest-templates-TT210/jpa_bean.vm
@@ -1,4 +1,3 @@
-##----------------------------------------------------------------------------------------------------
 ##--------------------------------------------------------------------------------------------------------
 ## Data fields = fields not in Primary Key and not in selected Links    
 #set( $dataFields = $entity.getAttributesByCriteria( $const.NOT_KEY, $const.NOT_IN_SELECTED_LINKS ) )
@@ -15,7 +14,7 @@
 ## IF COMPOSITE PRIMARY KEY : GENERATE A JAVA CLASS FOR THIS COMPOSITE KEY
 #if ( $entity.hasCompositePrimaryKey() )
 // This Bean has a composite Primary Key  
-$generator.generate($target.entityName ,  "${entity.name}Key.java", $target.folder, "jpa/jpa_bean_pk.vm"  )
+$generator.generate($target.entityName ,  "${entity.name}Key.java", $target.folder, "jpa_bean_pk.vm"  )
 #else 
 // This Bean has a basic Primary Key (not composite) 
 #end
@@ -50,9 +49,12 @@ import $import;
  */
 
 $jpa.entityAnnotations(0, $entity)
-
-public class ${entity.name} implements Serializable {
-
+// Define named queries here
+@NamedQueries ( {
+  @NamedQuery ( name="${entity.name}.countAll", query="SELECT COUNT(x) FROM ${entity.name} x" )
+} )
+public class ${entity.name} implements Serializable
+{
     private static final long serialVersionUID = 1L;
 
 #if ( $entity.hasCompositePrimaryKey() )
@@ -107,7 +109,8 @@ $jpa.linkAnnotations(4, $link, $allMappedFields)
     //----------------------------------------------------------------------
     // CONSTRUCTOR(S)
     //----------------------------------------------------------------------
-    public ${entity.name}() {
+    public ${entity.name}()
+    {
 		super();
 #if ( $entity.hasCompositePrimaryKey() )        
 		this.compositePrimaryKey = new ${entity.name}Key();       
@@ -127,11 +130,13 @@ $jpa.linkAnnotations(4, $link, $allMappedFields)
 ##    }
 ##
 #foreach( $field in $entity.keyAttributes )
-#if ( $field.setter )    public void ${field.setter}( $field.type $field.name ) {
+#if ( $field.setter )    public void ${field.setter}( $field.type $field.name )
+    {
         this.compositePrimaryKey.${field.setter}( $field.name ) ;
     }
 #end
-#if ( $field.getter )    public $field.type ${field.getter}() {
+#if ( $field.getter )    public $field.type ${field.getter}()
+    {
         return this.compositePrimaryKey.${field.getter}() ;
     }
 #end
@@ -142,11 +147,13 @@ $jpa.linkAnnotations(4, $link, $allMappedFields)
     // GETTER & SETTER FOR THE KEY FIELD
     //----------------------------------------------------------------------
 #foreach( $field in $entity.keyAttributes )
-#if ( $field.setter )    public void ${field.setter}( $field.type $field.name ) {
+#if ( $field.setter )    public void ${field.setter}( $field.type $field.name )
+    {
         this.$field.name = $field.name ;
     }
 #end
-#if ( $field.getter )    public $field.type ${field.getter}() {
+#if ( $field.getter )    public $field.type ${field.getter}()
+    {
         return this.$field.name;
     }
 #end
@@ -160,11 +167,13 @@ $jpa.linkAnnotations(4, $link, $allMappedFields)
 ## #if ( $field.isUsedInLinkJoinColumn( $entity.selectedLinks ) != true )
 #if ( $field.databaseName )    //--- DATABASE MAPPING : $field.databaseName ( $field.databaseType ) 
 #end
-#if ( $field.setter )    public void ${field.setter}( $field.type $field.name ) {
+#if ( $field.setter )    public void ${field.setter}( $field.type $field.name )
+    {
         this.$field.name = $field.name;
     }
 #end
-#if ( $field.getter )    public $field.type ${field.getter}() {
+#if ( $field.getter )    public $field.type ${field.getter}()
+    {
         return this.$field.name;
     }
 #end
@@ -177,12 +186,14 @@ $jpa.linkAnnotations(4, $link, $allMappedFields)
     //----------------------------------------------------------------------
 ## #foreach( $link in $entity.links )
 #foreach( $link in $entity.selectedLinks )
-#if ( $link.setter )    public void ${link.setter}( ${link.formattedFieldType(0)} ${link.formattedFieldName(0)} ) {
-        this.${link.formattedFieldName(0)} = ${link.formattedFieldName(0)};
+#if ( $link.setter )    public void ${link.setter}( ${link.formattedFieldType(0)} ${link.fieldName} )
+    {
+        this.${link.fieldName} = ${link.fieldName};
     }
 #end
-#if ( $link.getter )    public ${link.formattedFieldType(0)} ${link.getter}() {
-        return this.${link.formattedFieldName(0)};
+#if ( $link.getter )    public ${link.formattedFieldType(0)} ${link.getter}()
+    {
+        return this.${link.fieldName};
     }
 #end
 
