--- a/src/main/webapp/common/partials/order-info.html
+++ b/src/main/webapp/common/partials/order-info.html
@@ -25,6 +25,10 @@
 		</div>
 	</div>
 	<div class="col-md-12">
+		<div class="pull-left">
+			<button class="btn btn-default" ng-click="vm.exportExel()">Export</button>
+			<!-- Export to excel -->
+		</div>
 		<div class="pull-right">
 			<select ng-model="vm.selectedNumPerPage"
 				ng-selected="vm.numPerPage = vm.selectedNumPerPage.number"
@@ -73,4 +77,60 @@
 				</tr>
 			</tfoot>
 		</table>
+		<div ng-show="exprotToExcel">
+			<div id="exportable">
+				<table st-table="displayedSubOrderList" wt-responsive-table
+					st-safe-src="vm.subOrderList" width="100%"
+					class="table table-striped table-bordered">
+					<thead>
+						<tr>
+							<th>รหัสสั่งซื้อ</th>
+							<th>{{vm.orderView.orderCode}}</th>
+						</tr>
+						<tr>
+							<th>ราคารวม</th>
+							<th>{{vm.orderView.orderNet}}</th>
+						</tr>
+						<tr>
+							<th>ชื่อลูกค้า</th>
+							<th>{{vm.orderView.customer.custName}}</th>
+						</tr>
+						<tr>
+							<th>ชื่อพนักงานทำรายการ</th>
+							<th>{{vm.orderView.empInfo.empName}}</th>
+						</tr>
+						<tr></tr>
+						<tr>
+							<th class="text-center" st-sort="product.prodCode">รหัสสินค้า</th>
+							<th class="text-center" st-sort="product.prodName">ชื่อสินค้า</th>
+							<th class="text-center" st-sort="product.prodPrice">ราคา</th>
+							<th class="text-center">จำนวน</th>
+							<th class="text-center">ทั้งหมด</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="order in displayedSubOrderList">
+							<td class="text-center">{{order.product.prodCode}}</td>
+							<td class="text-center">{{order.product.prodName}}</td>
+							<td class="text-center">{{order.product.prodPrice}}</td>
+							<td class="text-center">{{order.subQuantity}}</td>
+							<td class="text-center">{{order.subTotal}}</td>
+						</tr>
+					</tbody>
+					<tfoot>
+						<tr></tr>
+						<tr>
+							<td class="text-center">รวม</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td class="text-center">{{vm.orderView.orderNet}} บาท</td>
+						</tr>
+						<tr>
+							<td colspan="11">ทำรายการเมื่อ :: {{vm.orderView.orderDate}}</td>
+						</tr>
+					</tfoot>
+				</table>
+			</div>
+		</div>
 	</div>
