--- a/src/main/webapp/common/partials/order-info.html
+++ b/src/main/webapp/common/partials/order-info.html
@@ -30,7 +30,7 @@
 			<!-- Export to excel -->
 		</div>
 		<div class="pull-right">
-			<select ng-model="vm.selectedNumPerPage"
+			<select ng-model="vm.selectedNumPerPageDialog"
 				ng-selected="vm.numPerPage = vm.selectedNumPerPage.number"
 				ng-options="n.number for n in vm.numPerPages"
 				class="input-sm form-control selector-option"></select>
